k8s/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
    environment: dev
spec:
  selector:
    app: hello-world
    environment: dev
    version: blue  # Initially pointing to the blue deployment
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
